# athena

./: .env.example  .gitignore  README.md  alembic.ini  build.sh  data.demo.json  data.example.json  data.json  pyproject.toml  pyrightconfig.json
.github/: athena.code-workspace
alembic/: env.py
alembic/versions/: 6c52f14865f5_initial_schema.py  a1b2c3d4e5f6_add_cascade_and_unique.py  a7b8c9d0e1f2_add_dismissed_modals.py  b1c2d3e4f5a6_create_teller_enrollments.py  b2c3d4e5f6a7_add_interval_days.py  b8c9d0e1f2a3_add_account_language.py  c2d3e4f5a6b7_drop_gmail_subscriptions.py  c3d4e5f6a7b8_add_account_currency.py  c4d5e6f7a8b9_add_last_manual_refresh_at.py  d4e5f6a7b8c9_add_tour_completed_at.py  d5e6f7a8b9c0_add_risk_thresholds.py  e5f6a7b8c9d0_replace_tour_completed_at_with_completed_tours.py  f6a7b8c9d0e1_add_display_currency.py
app/: cli.py  config.py  database.py  dependencies.py  main.py
app/common/: encryption.py  logging.py
app/core/: post_processing.py  projection.py
app/models/: balance_schemas.py  commitment_schemas.py  domain.py  orm.py  schemas.py  teller_constants.py  teller_schemas.py
app/repositories/: balance_repository.py  commitment_repository.py  gmail_repository.py  teller_repository.py  transaction_repository.py
app/routers/: auth.py  balance.py  commitments.py  currency.py  demo.py  demo_data.py  designs.py  gmail.py  notifications.py  projection.py  teller.py  transactions.py
app/services/: auth_service.py  commitment_service.py  currency_service.py  demo_data_service.py  demo_service.py  email_parser.py  gmail_service.py  projection_service.py  teller_service.py  teller_sync.py
designs/: fetch_previewer.py
designs/designs_claude/: 01-timeline-river.html  02-horizon-stacks.html  03-runway-gauge.html  04-paycheck-pulse.html  05-cash-calendar.html  06-command-deck.html  07-guild-treasury.html  08-base-defense.html  09-resource-hq.html  10-dungeon-run.html
designs/designs_gemini/: 01-neon-hud.html  02-obsidian-periods.html  03-biolum-grid.html  04-liquid-assets.html  05-deep-radar.html  06-rts-command.html  07-dungeon-run.html  08-shield-gate.html  09-mana-flux.html  10-racing-telemetry.html
designs/designs_gpt/: arcane-ledger.html  budget-strip.html  bunker-control.html  (+7 more)
dev_tools/: pyproject.toml
dev_tools/athena_dev_tools/: __init__.py  router.py
docs/: db_schema.md  render-deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_commitment_conversion.py  test_currency.py  test_currency_service.py  test_designs_endpoint.py  test_email_parser.py  test_encryption.py  test_projection.py  test_service_and_api.py  test_teller_integration.py  test_teller_service.py
(+75 files in other folders)
