[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athena-dev-tools"
version = "0.1.0"
description = "Dev-only endpoints for Athena (not installed in production)"
requires-python = ">=3.12"
dependencies = [
    "athena",
]

[project.entry-points."athena.plugins"]
dev_tools = "athena_dev_tools:get_routers"
